--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -4,7 +4,8 @@
 @import "base/_mixins";
 @import "modules/_large-hero";
 @import "modules/_btn";
-
+@import "modules/_wrapper";
+@import "modules/_page-section";
 
 
 
