--- a/app/assets/styles/modules/_wrapper.css
+++ b/app/assets/styles/modules/_wrapper.css
@@ -4,5 +4,14 @@
     max-width: 1200px;
     margin-left: auto;
     margin-right: auto;
+    
+    &--medium {
+        max-width: 976px;
+    }
+    
+    .wrapper {
+        padding-left: 0;
+        padding-right: 0;
+    }
 }
 
