--- a/app/assets/styles/modules/_row.css
+++ b/app/assets/styles/modules/_row.css
@@ -12,7 +12,15 @@
     }
     
     
+    &__b-margin-until-medium {
+        margin-bottom: 1rem;
+    }
+    
     @mixin atMedium {
+        
+        &__b-margin-until-medium {
+            margin-bottom: 0;
+        }
         
         &__medium-4 {
             float: left;
