--- a/app/assets/styles/modules/_row.css
+++ b/app/assets/styles/modules/_row.css
@@ -2,12 +2,20 @@
     
     @mixin clearfix;
     
+    &--t-padding {
+        padding-top: 80px;
+    }
+    
     &--gutters {
         margin-right: -65px;
     }
     
     &--gutters-large {
         margin-right: -100px;
+    }
+    
+    &--gutters-small {
+        margin-right: -45px;
     }
     
     &--gutters > div {
@@ -17,6 +25,10 @@
     
     &--gutters-large > div {
         padding-right: 100px;
+    }
+    
+    &--gutters-small > div {
+        padding-right: 45px;
     }
     
     
@@ -55,6 +67,62 @@
         }
         
     }
+    
+    @mixin atLarge {
+        
+        &__b-margin-until-large {
+            margin-bottom: 0;
+        }
+        
+        &__large-4 {
+            float: left;
+            width: 33.33%;
+        }
+        
+        &__large-4--larger {
+            width: 37%;
+        }
+        
+        &__large-6 {
+            float: left;
+            width: 50%;
+        }
+    
+        &__large-8 {
+            float: left;
+            width: 66.66%;
+        } 
+        
+        &__large-8--smaller {
+            width: 63%;
+        }
+        
+    }
+   
+    /* Begin the equal height rule */
+    &--equal-height-at-medium {
+        @mixin atMedium {
+            display: flex;
+        }
+        
+        & > div {
+            float: none;
+            display: flex;
+        }
+    }
+    
+    /* Begin the equal height rule */
+    &--equal-height-at-large {
+        @mixin atLarge {
+            display: flex;
+        }
+        
+        & > div {
+            float: none;
+            display: flex;
+        }
+    }
+    
    
     
 }
