--- a/app/assets/styles/modules/_wrapper.css
+++ b/app/assets/styles/modules/_wrapper.css
@@ -11,6 +11,10 @@
         
     }
     
+    &--narrow {
+        max-width: 470px;
+    }
+    
     &--no-padding-until-medium {
         padding-left: 0;
         padding-right: 0;
