--- a/app/assets/styles/modules/_row.css
+++ b/app/assets/styles/modules/_row.css
@@ -100,7 +100,7 @@
     }
    
     /* Begin the equal height rule */
-    &--equal-height-at-medium {
+    .flexbox &--equal-height-at-medium {
         @mixin atMedium {
             display: flex;
         }
@@ -112,7 +112,7 @@
     }
     
     /* Begin the equal height rule */
-    &--equal-height-at-large {
+    .flexbox &--equal-height-at-large {
         @mixin atLarge {
             display: flex;
         }
